feat: criado o testes para findbyId, findAll, create